# ComfyS3Plus

./: .gitignore  makefile  pyproject.toml
src/: client_s3.py  logger.py  nodes_mappings.py
src/nodes/: download_file_s3.py  load_audio_url.py  load_image_s3.py  load_image_url.py  save_audio_s3.py  save_image_s3.py  save_image_webp_s3.py  save_video_files_s3.py  upload_file_s3.py
