[project]
name = "comfys3plus"
description = "fork from https://github.com/TemryL/ComfyS3 and add some nodes for audio"
version = "1.0.1"
license = { file = "LICENSE" }
dependencies = ["python-dotenv==1.0.1", "boto3==1.34.32"]

[project.urls]
Repository = "https://github.com/wujohns/ComfyS3Plus"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "wujohns"
DisplayName = "ComfyS3Plus"
Icon = ""
